style.css
/* the * alone indicates rules for all elements in html files. */
/*called a universal selector*/
body {
    font-family: "Gill Sans", sans-serif;
    font-weight: lighter;
    background: #ffffff;
    color:#6b6774;
}

.myName {
    font-size: larger;
    font-weight: normal;
    text-align: center;
}

.headshot {
  max-height: 100px;
  width: auto;
}

/* Dropdown Button */
.dropbtn {
    background-color: CCC7BD;
    color: 000000;
    padding: 16px;
    font-size: 20px;
    border: none;
    cursor: pointer;
  }
  
  /* Dropdown button on hover & focus */
  .dropbtn:hover, .dropbtn:focus {
    background-color: E0DDD7;
  }
  
  /* The container <div> - needed to position the dropdown content */
  .dropdown {
    position: relative;
    display: inline-block;
  }
  
  /* Dropdown Content (Hidden by Default) */
  .dropdown-content {
    display: none;
    position: absolute;
    background-color: E0DDD7;
    min-width: 160px;
    /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
    z-index: 1;
  }
  
  /* Links inside the dropdown */
  .dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
  }
  
  /* Change color of dropdown links on hover */
  .dropdown-content a:hover {background-color: #ddd;}
  
  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
  .show {display:block;}

.page {
    background-color: #ffffff;
    padding: 15px;
    text-align: center;
    font-size: 30px;
}


p {
    margin: 20px;
    padding:20px;
    line-height: 30px;
}


h3 {
    margin: 18px;
    padding: 15px;
}

h4 {
    margin: 18px;
    padding: 15px;
}

